src/css/_desaparecidos.scss
/* Desaparecidos
------------------------------------------ */

.content.desaparecidos {
	aside.filters {
		.download-data.btn {
			background: white;
			border: 2px solid $primary;
			color: $primary;
			display: inline-block;
			margin-bottom: 20px;
			&:hover {
				background-color: $primary;
				color: white;
			}
			@media(max-width: 768px) {
				width: 100%;
				margin-top: 20px;
			}
		}
		section.filter {
			margin: 30px 0;
		}
		.form-check label{
			font-size: 1rem;
		}
	}
	@media(max-width: 576px) {
		h1 {
			font-size: 2rem;
		}
		.banner {
			padding: 20% 0;
		}
	}
	.fa-search {
		position: absolute;
		right: 10px;
		top: 5px;
	}
	.main {
		margin-top: 4%;
		margin-bottom: 6%;
	}
	.round-img {
		width: 200px;
		height: 200px;
		border-radius: 50%;
		margin: 0 auto;
		display: block;
		margin-bottom: 15px;
		overflow: hidden;
		position: relative;
		img {
			width: 100%;
			height: 100%;
			display: block;
		}
		.overlay {
			background-color: rgba(#000, .5);
			cursor: pointer;
			opacity: 0;
			position: absolute;
			left: 0;
			top: 0;
			width: 100%;
			height: 100%;
			transition: all 300ms;
		}
		svg {
			position: relative;
			top: 65px;
			width: 60px;
			height: 60px;
			z-index: 10;
		}
	}
	.search-alpha-form {
		margin-bottom: 60px;
		position: relative;
		input#q {
			width: 100%;
			border: 0 none;
			border-bottom: 1px solid #ccc;
			font-size: 1.2rem;
			padding: 8px 10px;
		}
	}
	.desaparecidos-wrap .row {
		margin-bottom: 30px;
	}
	.person {
		.description {
			padding: 0 18px;
			display: none;
			overflow: hidden;
		}
		&:hover .overlay, .active {
			opacity: 1;
		}
		.name {
			color: $darkgray;
			font-size: 1.2rem;
			font-weight: 600;
			text-align: center;
		}
	}

	@media(max-width: 1200px) {
		.container-w90p {
			width: 100%;
		}
	}
}

